fixed background image on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -324,26 +324,8 @@ a.skill-box:hover {
 
 /* small tablet (portrait) */
 @media screen and (max-width: 650px) and (orientation: portrait) {
-  .overlay1 {
-    background: linear-gradient(
-      rgba(0, 0, 0, 0.9), 
-      rgba(0, 0, 0, 0.9)
-    ), no-repeat center center scroll url(../images/texture.jpg);
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
-
-  .overlay2 {
-    background: linear-gradient(
-      rgba(120, 120, 120, 0.93), 
-      rgba(120, 120, 120, 0.93)
-    ), no-repeat center center scroll url(../images/texture.jpg);
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+  .overlay1, .overlay2 {
+    background-attachment: scroll;
   }
 
   #home-container {
@@ -447,8 +429,8 @@ a.skill-box:hover {
 
   #home-text {
     width: 240px;
-    height: 190px;
-    margin-top: 30px;
+    height: 180px;
+    margin-top: 15px;
     font-size: 11pt;
   }
 
@@ -457,7 +439,7 @@ a.skill-box:hover {
   }
 
   .home-icon {
-    font-size: 16pt;
+    font-size: 14pt;
   }
 
   .section-container {
@@ -480,26 +462,8 @@ a.skill-box:hover {
     font-size: 16pt;
   }
 
-  .overlay1 {
-    background: linear-gradient(
-      rgba(0, 0, 0, 0.9), 
-      rgba(0, 0, 0, 0.9)
-    ), no-repeat center center scroll url(../images/texture.jpg);
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
-
-  .overlay2 {
-    background: linear-gradient(
-      rgba(120, 120, 120, 0.93), 
-      rgba(120, 120, 120, 0.93)
-    ), no-repeat center center scroll url(../images/texture.jpg);
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+  .overlay1, .overlay2 {
+    background-attachment: scroll;
   }
 
   #home-text {
